[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Planet.gd" type="Script" id=1]
[ext_resource path="res://Textures/orbit/curve.png" type="Texture" id=2]
[ext_resource path="res://Textures/orbit/planet orbit.png" type="Texture" id=3]
[ext_resource path="res://Textures/tombstone.png" type="Texture" id=4]
[ext_resource path="res://Textures/Planets/curcle.png" type="Texture" id=5]
[ext_resource path="res://Textures/orbit/star.png" type="Texture" id=6]
[ext_resource path="res://Textures/orbit/extendring.png" type="Texture" id=7]
[ext_resource path="res://sounds/pop/pop1.ogg" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=2]
radius = 500.0

[sub_resource type="CircleShape2D" id=1]
radius = 500.0

[node name="Planet" type="Node2D"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Planet" type="Area2D" parent="Node2D"]
scale = Vector2( 0.125, 0.125 )

[node name="Planet" type="Sprite" parent="Node2D/Planet"]
modulate = Color( 0.47451, 0.152941, 0.152941, 1 )
texture = ExtResource( 2 )

[node name="sphered_cube" type="Sprite" parent="Node2D/Planet"]
visible = false
scale = Vector2( 2.2, 2.2 )
texture = ExtResource( 5 )

[node name="SunButt" type="Sprite" parent="Node2D/Planet"]
visible = false
position = Vector2( 0.00012207, 1.45519e-11 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="MoonButt" type="Sprite" parent="Node2D/Planet"]
visible = false
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Planet"]
visible = false
shape = SubResource( 2 )

[node name="OrbitArea" type="Area2D" parent="Node2D"]
scale = Vector2( 0.3125, 0.3125 )

[node name="Orbit" type="Sprite" parent="Node2D/OrbitArea"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/OrbitArea"]
visible = false
shape = SubResource( 2 )

[node name="Tombstone" type="Sprite" parent="Node2D"]
visible = false
position = Vector2( 1, -82 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="pop" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource( 8 )

[node name="Tween" type="Tween" parent="Node2D"]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Node2D"]
visible = false
scale = Vector2( 11.95, 11.95 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="Node2D"]
visible = false
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )
shape_centered = false

[connection signal="body_entered" from="Node2D/Planet" to="." method="_on_Planet_body_entered"]
[connection signal="body_entered" from="Node2D/OrbitArea" to="." method="_on_OrbitArea_body_entered"]
[connection signal="viewport_exited" from="Node2D/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="pressed" from="Node2D/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="Node2D/TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
